# databricks-monorepo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  Makefile  README.md  databricks.yml  justfile  pyproject.toml
.claude/rules/: ci-gitlab.md  data-governance.md  databricks-activation.md  databricks-frontend-api.md  databricks-jobs.md  databricks-patterns.md  pyspark-performance.md  pyspark-testing.md  python-databricks.md
.claude/skills/autoloader-medallion/: SKILL.md
.claude/skills/creating-apps/: SKILL.md
.claude/skills/database-migrations/: SKILL.md
.claude/skills/databricks-connector-install/: SKILL.md
.claude/skills/databricks-lakebase/: SKILL.md
.claude/skills/migrate-app/: SKILL.md
.claude/skills/new-app/: SKILL.md
.claude/skills/repo-health-check/: SKILL.md
.gitlab/merge_request_templates/: default.md
apps/: AGENTS.md
apps/demo-ingest-medallion/: AGENTS.md  bundle.yml  pyproject.toml
apps/demo-ingest-medallion/notebooks/: 01_bronze_ingestion.py  02_silver_processing.py  03_gold_business_logic.py
apps/demo-ingest-medallion/src/demo_ingest_medallion/: __init__.py  bronze.py  gold.py  silver.py
apps/demo-ingest-medallion/tests/: test_transforms.py
apps/finance-payment-recon/: AGENTS.md  CLAUDE.md  bundle.yml  pyproject.toml
apps/finance-payment-recon/notebooks/: 01_api_ingest.py  02_reconcile.py  run.py
docs/: data-architecture.md  glossary.md
docs/adr/: 0001-monorepo-architecture.md  0002-migrate-demo-ingest-medallion.md  0003-create-finance-payment-recon.md
docs/compliance/: README.md  im8.md  pdpa.md  pii.md  regulated-workspace.md  soc2.md
docs/onboarding/: README.md  business-analyst.md  data-analyst.md  data-engineer.md  data-scientist.md
docs/runbooks/: access-control.md  bootstrap-ci-and-audit.md  branching-strategy.md  codeowners-maintenance.md  create-a-new-project.md  databricks-code-assistant.md  databricks-git-folder-workflow.md  import-existing-job.md  lakebase-sync-design.md  migrate-a-script.md  migrate-to-pants.md  quarterly-access-review.md  release-process.md
infra/: AGENTS.md
libs/: AGENTS.md
tools/: AGENTS.md
tools/scripts/: affected.py  audit_log.py  check_boundaries.py  check_ownership_sync.py  check_pii_contract.py  check_platform_health.py  diff_outputs.py  dump_access.py  gen_data_map.py  import_job.py  lint_agents_md.py  list_libs.py  pyproject.toml  scaffold.py  where_is.py
(+25 files in other folders)
