[project]
name = "demo-ingest-medallion"
version = "0.1.0"
description = "Medallion architecture demo — bronze / silver / gold pipeline"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pyspark>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_ingest_medallion"]
