[project]
name = "cdo-tools"
version = "0.1.0"
description = "Platform tooling scripts (workspace member, not deployed)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "click>=8",
    "rich>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdo_tools"]
# But we expose the .py files directly to keep `python tools/scripts/X.py` working.
